# fineweb-c-analysis-ita

./: .gitignore  LICENSE  README.md  environment.dev.yml  environment.yml  hello.py  pipeline.yaml  pyproject.toml
data/: ask_prompt.md  system_prompt.md  topic_promp_vars.json
data/haystack_pipelines/: deepseek_llama_topic_extraction.yml  gemma_topic_extraction.yml  llama_topic_extraction.yml
scripts/analyze/: analyze_topics.py
scripts/features/: tf_idf_keywords.py
src/haystack/: topic_pipeline.py
tasks/: download.py  haystack_pipelines.py
