[project]
name = "fineweb-c-ita"
version = "0.1.0"
requires-python = ">=3.12.0"
dependencies = [
    "haystack-ai>=2.9.0",
    "llvmlite>=0.44.0",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "nltk>=3.9.1",
    "numpy>=2.2.2",
    "ollama-haystack>=2.3.0",
    "pandas>=2.2.3",
    "ploomber>=0.23.3",
    "polars>=1.22.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "sentence-transformers[train]>=3.4.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124"},
]
torchvision = [
  { index = "pytorch-cu124"},
]
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
